# rocket-fft

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml  upload-to-pypi.yml  upload-to-test-pypi.yml
rocket_fft/: __init__.py  __init__.pyi  _pocketfft_hdronly.h  _pocketfft_internal.cpp  _pocketfft_numba.cpp  _special_helpers.c  _special_helpers.cpp  _special_helpers.pyx  _version.py  extutils.py  imputils.py  ipocketfft.py  numba_typing.py  overloads.py  pocketfft.py  pocketfft_ctypes.py  pocketfft_llvm.py  pocketfft_utils.py  special.py  typing.py  typutils.py  unsafe.py
rocket_fft/lib.win-amd64-3.9/rocket_fft/: __init__.py  numba_typing.py  overloads.py  unsafe.py
rocket_fft/temp.win-amd64-3.9/Release/rocket_fft/: _pocketfft_numba.exp  _pocketfft_numba.lib
rocket_fft/tests/: test_numpy_testsuite.py  test_scipy_testsuite.py
tests/: fixtures.py  helpers.py  profile_compile_times.py  runtests.py  test_caching.py  test_fftlog.py  test_low_level_interface.py  test_misc.py  test_multiprocessing.py  test_multithreading.py  test_numpy_compare.py  test_numpy_like.py  test_numpy_testsuite.py  test_overwrite_and_dtype.py  test_scipy_compare.py  test_scipy_like.py  test_scipy_testsuite.py  test_typing.py  test_unsafe.py
