[build-system]
requires = [
    "setuptools>=72",
    "wheel",
    "numpy>=1.26",
    "numba>=0.60"
]
build-backend = "setuptools.build_meta"

[project]
name = "rocket-fft"
version = "0.3.0"
description = "Rocket-FFT extends Numba by scipy.fft and numpy.fft"
readme = "README.md"
license = "BSD-3-Clause"

authors = [
    { name = "Styfen Schär", email = "styfen.schaer.blog@gmail.com" }
]

keywords = ["FFT", "Fourier", "Numba", "SciPy", "NumPy"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]

dependencies = [
    "numba>=0.60.0"
]

[project.optional-dependencies]
dev = [
    "scipy>=1.13.1",
    "pytest>=8.4.2"
]

[project.urls]
Homepage = "https://github.com/styfenschaer/rocket-fft"
Repository = "https://github.com/styfenschaer/rocket-fft"

[project.entry-points."numba_extensions"]
init = "rocket_fft:_init_extension"
