[metadata]
name = rocket-fft
version = 0.3.0
description = Rocket-FFT extends Numba by scipy.fft and numpy.fft
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Styfen Schär
author_email = styfen.schaer.blog@gmail.com
url = https://github.com/styfenschaer/rocket-fft
keywords = FFT, Fourier, Numba, SciPy, NumPy
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numba>=0.60.0

[options.extras_require]
dev =
    scipy>=1.13.1
    pytest>=8.4.2

[options.entry_points]
numba_extensions =
    init = rocket_fft:_init_extension

[options.package_data]
rocket_fft = *.pyi